--- a/src/css/sassOutput.css
+++ b/src/css/sassOutput.css
@@ -101,7 +101,24 @@ select {
   border-radius: 5px;
 }
 
-@media (max-width: 768px) {
+#searchsite {
+  max-width: 150px;
+}
+
+#page-search {
+  margin-right: 8rem;
+}
+#page-search input {
+  padding: 7.5px 15px 7.5px 15px;
+}
+
+@media (min-width: 768) {
+  #page-search input {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+}
+@media (max-width: 1024px) {
   #topnav {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -109,5 +126,36 @@ select {
 
   #language {
     margin: 10px 0 10px 0;
+  }
+
+  #page-search {
+    margin-right: 18rem;
+  }
+  #page-search input {
+    margin-top: 0.4rem;
+    margin-bottom: 0.4rem;
+  }
+
+  .menu {
+    min-width: 200px;
+  }
+}
+@media (min-width: 1501px) {
+  #mainnav {
+    min-width: 100%;
+  }
+
+  #page-search {
+    margin-right: 10rem;
+  }
+}
+@media (min-width: 2084px) {
+  #page-search {
+    margin-right: 0rem;
+  }
+}
+@media (min-width: 2400px) {
+  #page-search {
+    margin-right: -2.2rem;
   }
 }/*# sourceMappingURL=sassOutput.css.map */
