--- a/src/css/sassOutput.sass
+++ b/src/css/sassOutput.sass
@@ -98,9 +98,50 @@ select
 	font-weight: 100
 	border-radius: 5px
 
-@media (max-width: 768px)
+// #logo
+#searchsite
+	max-width: 150px
+
+#page-search
+	margin-right: 8rem
+	input
+		padding: 7.5px 15px 7.5px 15px
+
+@media (min-width: 768)
+	#page-search
+		input
+			margin-top: 0.5rem
+			margin-bottom: 0.5rem
+
+// remember the new md 1024 & lg 1400
+@media (max-width: 1024px)
 	#topnav
 		padding-top: 10px
 		padding-bottom: 10px
 	#language
 		margin: 10px 0 10px 0
+
+	#page-search
+		margin-right: 18rem
+		input
+			margin-top: 0.4rem
+			margin-bottom: 0.4rem
+	.menu
+		min-width: 200px
+
+
+@media (min-width: 1501px)
+	#mainnav
+		min-width: 100%
+	#page-search
+		margin-right:10rem
+
+
+@media (min-width: 2084px)
+	#page-search
+		margin-right:0rem
+
+
+@media (min-width: 2400px)
+	#page-search
+		margin-right:-2.2rem
