yeah, now I get it. m-auto centered everything. I'll think I'll keep on using tw after this

--- a/src/css/sassOutput.sass
+++ b/src/css/sassOutput.sass
@@ -1,10 +1,15 @@
 $brand: #4c8930
 $drpdownbg: #373a3c
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap')
+
 body
-	font-family: sans-serif
+	font-family: 'Open Sans', sans-serif
 	font-size: 16px
 	padding: 0px
 	margin: 0px
+
+h1
+	font-family: 'Open Sans', sans-serif
 
 
 #hero
@@ -61,6 +66,7 @@ select
 	background-blend-mode: soft-light
 	background-color: #666
 	max-height: 480px
+	background-position: center -2.3rem
 
 
 
@@ -116,6 +122,9 @@ select
 	margin-right: 8rem
 	input
 		padding: 7.5px 15px 7.5px 15px
+#hero-title
+	font-size: 2.2rem
+	padding-top: 1rem
 
 @media (min-width: 768)
 	#page-search
