--- a/src/css/sailfishStyles.css
+++ b/src/css/sailfishStyles.css
@@ -64,6 +64,10 @@
   position: sticky
 }
 
+.m-auto {
+  margin: auto
+}
+
 .ml-32 {
   margin-left: 8rem
 }
@@ -134,10 +138,6 @@
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity))
-}
-
-.bg-blend-darken {
-  background-blend-mode: darken
 }
 
 @media (min-width: 1028px) {
