--- a/src/css/sassOutput.css
+++ b/src/css/sassOutput.css
@@ -1,8 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 body {
-  font-family: sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   padding: 0px;
   margin: 0px;
+}
+
+h1 {
+  font-family: "Open Sans", sans-serif;
 }
 
 #hero button {
@@ -62,6 +67,7 @@ select {
   background-blend-mode: soft-light;
   background-color: #666;
   max-height: 480px;
+  background-position: center -2.3rem;
 }
 
 #topnav {
@@ -115,6 +121,11 @@ select {
 }
 #page-search input {
   padding: 7.5px 15px 7.5px 15px;
+}
+
+#hero-title {
+  font-size: 2.2rem;
+  padding-top: 1rem;
 }
 
 @media (min-width: 768) {
