--- a/src/css/sassOutput.css
+++ b/src/css/sassOutput.css
@@ -10,19 +10,7 @@ h1 {
   font-family: "Open Sans", sans-serif;
 }
 
-#hero button {
-  background-color: #4c8930;
-  color: #fff;
-  border: none;
-  min-width: 141px;
-  min-height: 50px;
-  cursor: pointer;
-  font-size: 20px;
-  font-weight: 100;
-  border-radius: 5px;
-}
-
-#newsletter button {
+button {
   background-color: #4c8930;
   color: #fff;
   border: none;
@@ -37,6 +25,7 @@ h1 {
 a {
   cursor: pointer;
   text-decoration: none;
+  color: #fff;
 }
 
 select {
@@ -45,29 +34,20 @@ select {
   color: #555;
   font-weight: 100;
   cursor: pointer;
+  background-color: #fff;
 }
 
 #language {
   min-width: 180px;
   min-height: 35px;
   border-radius: 5px;
-  padding: 0 8px 0 13px;
+  padding: 3px 8px 0 13px;
   margin: -2px 120px 0 10px;
   border: 0px;
 }
 
 .greybd {
   border: 1px solid #ddd;
-}
-
-#hero {
-  background-image: url("../images/jumbotron.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-blend-mode: soft-light;
-  background-color: #666;
-  max-height: 480px;
-  background-position: center -2.3rem;
 }
 
 #topnav {
@@ -112,32 +92,67 @@ select {
   border-radius: 5px;
 }
 
+#logo {
+  padding-left: 112px;
+  margin-right: 30px;
+}
+
 #searchsite {
   max-width: 150px;
 }
 
 #page-search {
-  margin-right: 8rem;
+  margin-right: 1rem;
 }
 #page-search input {
   padding: 7.5px 15px 7.5px 15px;
 }
 
+#hero {
+  background-image: url("../images/jumbotron.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: soft-light;
+  background-color: #666;
+  max-height: 480px;
+  background-position: center -128px;
+}
+#hero button {
+  margin-top: -1rem;
+  min-width: 141px;
+  min-height: 50px;
+}
+
 #hero-title {
-  font-size: 2.2rem;
-  padding-top: 1rem;
+  font-size: 3.4rem;
 }
 
-@media (min-width: 768) {
-  #page-search input {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-  }
-
-  #hero {
-    max-height: 200px;
-  }
+#compcards div:nth-child(1) {
+  background-image: url("../images/company.jpg");
 }
+#compcards div:nth-child(2) {
+  background-image: url("../images/products.jpg");
+}
+#compcards div:nth-child(3) {
+  background-image: url("../images/contact.jpg");
+}
+
+.compcard {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: soft-light;
+  background-color: #666;
+  background-position: center center;
+  min-height: 222px;
+  border-radius: 5px;
+  text-align: center;
+}
+.compcard a {
+  font-size: 1.5rem;
+  color: #fff;
+  font-weight: 600;
+}
+
 @media (max-width: 1024px) {
   #topnav {
     padding-top: 10px;
@@ -150,6 +165,7 @@ select {
 
   #page-search {
     margin-right: 18rem;
+    margin-left: 8rem;
   }
   #page-search input {
     margin-top: 0.4rem;
@@ -158,6 +174,40 @@ select {
 
   .menu {
     min-width: 200px;
+  }
+
+  #hero-title {
+    font-size: 2rem;
+    padding: 0 10px 0 10px;
+  }
+
+  #hero {
+    min-height: 200px;
+  }
+  #hero button {
+    margin-bottom: 1%;
+  }
+
+  #compcards div:nth-child(3) {
+    background-position: center 0px;
+  }
+}
+@media (min-width: 768) {
+  #page-search input {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  #compcards div:nth-child(3) {
+    background-position: center -center;
+  }
+}
+@media (min-width: 1400px) {
+  #compcards div:first-child {
+    margin-left: 25px;
+  }
+  #compcards div:last-child {
+    margin-right: 25px;
   }
 }
 @media (min-width: 1501px) {
@@ -171,11 +221,15 @@ select {
 }
 @media (min-width: 2084px) {
   #page-search {
-    margin-right: 0rem;
+    margin-right: -1%;
+  }
+
+  #hero {
+    min-height: 700px;
   }
 }
 @media (min-width: 2400px) {
   #page-search {
-    margin-right: -2.2rem;
+    margin-right: -10%;
   }
 }/*# sourceMappingURL=sassOutput.css.map */
