--- a/src/css/sassOutput.sass
+++ b/src/css/sassOutput.sass
@@ -156,11 +156,28 @@ select
 		color: #fff
 		font-weight: 600
 
+// * counters
+#counters
+	margin-bottom: 3rem
 
-// #company
+.counter
+	display: flex
+	max-height: 200px
+	p
+		line-height: 1rem
+	h2
+		font-size: 3.5rem
+		font-weight:200
+		line-height:0rem
+	img
+		margin-top:25px
+		max-height:61px
 
-// #contactUs
 
+
+#news
+	background-color: #eceeef
+	min-height: 500px
 
 
 // ! *MAX* 1024
@@ -196,6 +213,8 @@ select
 		div:nth-child(3)
 			background-position: center 0px
 
+	#counters
+		
 // ! min 768
 
 @media (min-width: 768)
@@ -205,7 +224,10 @@ select
 			margin-bottom: 0.5rem
 	#compcards
 		div:nth-child(3)
-			background-position: center -center
+			background-position: center center
+
+
+
 //! min 1400
 @media (min-width: 1400px)
 	#compcards
