--- a/src/css/sailfishStyles.css
+++ b/src/css/sailfishStyles.css
@@ -94,8 +94,8 @@
   display: grid
 }
 
-.grid-flow-col {
-  grid-auto-flow: column
+.hidden {
+  display: none
 }
 
 .flex-wrap {
@@ -145,6 +145,18 @@
   padding-bottom: 1.25rem
 }
 
+.pl-2 {
+  padding-left: 0.5rem
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem
+}
+
+.pt-12 {
+  padding-top: 3rem
+}
+
 .text-center {
   text-align: center
 }
@@ -163,6 +175,11 @@
 
 .font-thin {
   font-weight: 100
+}
+
+.text-textcolor {
+  --tw-text-opacity: 1;
+  color: rgb(55 58 60 / var(--tw-text-opacity))
 }
 
 .text-white {
