--- a/src/css/sassOutput.css
+++ b/src/css/sassOutput.css
@@ -56,7 +56,7 @@ select {
 }
 
 .greybd {
-  border: 1px solid #ddd;
+  border: 1px solid #dddddd;
 }
 
 #topnav {
@@ -209,7 +209,7 @@ select {
 
 #references {
   background-color: #fff;
-  margin-bottom: -21px;
+  margin: 0px 72px 10px 72px;
 }
 #references h1 {
   font-size: 2rem;
@@ -217,22 +217,45 @@ select {
 
 .referencesitem {
   background-color: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #dddddd;
   border-radius: 5px;
+  min-height: 375px;
 }
-.referencesitem h1 {
-  padding: 10px 65px 10px 15px;
-  font-size: 2rem;
+.referencesitem h4 {
+  font-size: 1.4rem;
+  margin: 20px 0px 0px 0px;
 }
 .referencesitem p {
-  padding: 10px 65px 10px 15px;
+  padding: 0 24px 0 24px;
 }
 
 .referencesimage {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #dddddd;
+  min-height: 50%;
+}
+
+#newsletter {
+  border-top: 1px solid #dddddd;
+  padding-bottom: 19px;
+}
+#newsletter h1 {
+  font-size: 2rem;
+}
+#newsletter p {
+  max-width: 350px;
+  margin-left: 20%;
+}
+
+#contact-info input {
+  font-size: 16px;
+  min-height: 50;
+  min-width: 418px;
+  padding: 13px 0 13px 10px;
+  border-radius: 5px;
+  border: 1px solid #dddddd;
 }
 
 @media (max-width: 1024px) {
