--- a/src/css/sassOutput.sass
+++ b/src/css/sassOutput.sass
@@ -31,8 +31,6 @@ button
 		font-weight: 100
 		border-radius: 5px
 
-
-
 a
 	cursor: pointer
 	text-decoration: none
@@ -60,6 +58,68 @@ select
 
 .greybd
 	border: 1px solid $bordergrey
+// here's the menu stuff
+// hide the left side menu
+#togglemenu
+	display: none
+	position: fixed
+	background-color:$brand
+	padding-top: 300px
+	border-radius: 0 0 10px 0
+	opacity: 0.8
+
+// hamburger button
+@media only screen and (max-width: 1024px)
+	.hamburger
+		display: none
+	.hamburgerbtn
+		display: inline
+
+@media only screen and (min-width: 1024px)
+	.hamburger
+		display: block
+	.hamburgerbtn, .dd
+		display: none
+
+.dd
+	position: fixed
+	top:10px
+	left: 10px
+	background-color:$brand
+	width: 40px
+	height: 30px
+	padding: 3px 2px 10px 7px
+	border-radius: 5px
+	margin: 30px 0px 0px 10px
+
+.hamburgerbtn
+	cursor: pointer
+
+
+.bar1, .bar2, .bar3
+	width: 35px
+	height: 5px
+	background-color: $bgwhite
+	margin: 6px 0
+	transition: 0.4s
+
+
+.change
+	background-color: red
+	.bar1
+		-webkit-transform: rotate(-45deg) translate(-9px, 6px)
+		transform: rotate(-45deg) translate(-9px, 6px)
+
+
+.change
+	.bar2
+		opacity: 0
+
+.change
+	.bar3
+		-webkit-transform: rotate(45deg) translate(-8px, -8px)
+	transform: rotate(45deg) translate(-8px, -8px)
+
 
 #topnav
 	min-height: 58-14px
@@ -285,12 +345,11 @@ select
 		cursor: pointer
 		border-radius: 5px
 //t  here we start with the responsive layout
-//t *MAX* 1024
 
 
-// remember the new md 1024 & lg 1400
+
 @media (max-width: 1024px)
-	
+
 	#footer
 		text-align: center
 		min-height:300px
@@ -329,6 +388,7 @@ select
 	#news
 		h3
 			font-size: 1rem
+
 
 
 //t min 768
